[bugfix] Another attempts to fix coverall & Sonar