@@ -73,8 +73,9 @@
                 <version>2.19.1</version>
                 <configuration>
                     <forkCount>5</forkCount>
-                    <argLine>-Xmx1024m --illegal-access=permit</argLine>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m --illegal-access=permit</argLine>
                     <reuseForks>true</reuseForks>
+                    <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
                 <dependencies>
                     <dependency>
